--- a/filterchain/build.gradle
+++ b/filterchain/build.gradle
@@ -24,4 +24,6 @@
 
 dependencies {
     api project(':tweetwallfx-configuration')
+
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
 }
