--- a/google-cloud/build.gradle
+++ b/google-cloud/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     implementation project(':tweetwallfx-tweet-api')
     implementation project(':tweetwallfx-filterchain')
     implementation group: 'com.google.cloud', name: 'google-cloud-vision', version: versionGoogleVision
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
     implementation group: 'org.ehcache', name: 'ehcache', version: versionEHCache
 }
