--- a/util/build.gradle
+++ b/util/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2015-2019 TweetWallFX
+ * Copyright (c) 2015-2022 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -21,13 +21,11 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-apply plugin: 'java'
 
 dependencies {
-    compile group: 'javax.json.bind', name:'javax.json.bind-api', version: versionJavaxJsonBindAPI
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: versionLog4j
+    implementation group: 'javax.json.bind', name:'javax.json.bind-api', version: versionJavaxJsonBindAPI
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
 
-    runtime group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
     runtime group: 'org.eclipse', name: 'yasson', version: versionYasson
     runtime group: 'org.glassfish', name: 'javax.json', version: versionJavaxJson
 }
