--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ buildscript {
         maven {
             url 'https://plugins.gradle.org/m2/'
         }
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
