Revert to standard logLevel
while showing all gradle warnings

--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -49,16 +49,16 @@ jobs:
       - name: Run assemble tasks
         uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
         with:
-          arguments: --no-daemon --refresh-dependencies --info assemble
+          arguments: --no-daemon --refresh-dependencies --warning-mode all assemble
 
       # Run test tasks
       - name: Run test tasks
         uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
         with:
-          arguments: --no-daemon --info test
+          arguments: --no-daemon --warning-mode all test
 
       # Run check tasks
       - name: Run check tasks
         uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
         with:
-          arguments: --no-daemon --info check
+          arguments: --no-daemon --warning-mode all check
