--- a/build.gradle
+++ b/build.gradle
@@ -257,12 +257,19 @@ allprojects {
 
         // configuring Versions plugin
         dependencyUpdates {
-            revision = 'release'
+            outputFormatter = 'plain,jhtml'
+            gradleReleaseChannel = 'current'
 
-            rejectVersionIf { /*ComponentSelection*/ selection ->
-                // version is a non-release version?
-                return ['alpha', 'beta', 'rc', 'cr', 'm', 'ea'].any{qualifier ->
-                     selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*.*/
+            resolutionStrategy {
+                componentSelection { rules ->
+                    rules.all { ComponentSelection selection ->
+                        boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'pr', 'ea'].any { qualifier ->
+                            selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-+]*/
+                        }
+                        if (rejected) {
+                            selection.reject('Release candidate')
+                        }
+                    }
                 }
             }
         }
