--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,10 +23,10 @@
  */
 
 dependencies {
+    api group: 'de.jensd', name: 'fontawesomefx-commons', version: '11.0'
+    api group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: '4.7.0-11'
     api group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
 
-    compile group: 'de.jensd', name: 'fontawesomefx-commons', version: versionFontawesomeCommons11
-    compile group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: versionFontawesomefx11
     compile group: 'com.vdurmont', name: 'emoji-java', version: versionEmojiJava
     compile project(':tweetwallfx-tweet-api')
     compile project(':tweetwallfx-configuration')
