--- a/util/build.gradle
+++ b/util/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     implementation group: 'javax.json.bind', name:'javax.json.bind-api', version: versionJavaxJsonBindAPI
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
 
-    runtime group: 'org.eclipse', name: 'yasson', version: versionYasson
+    runtimeOnly group: 'org.eclipse', name: 'yasson', version: '1.0.5'
     runtime group: 'org.glassfish', name: 'javax.json', version: versionJavaxJson
 }
