--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ buildscript {
         }
 
         // VCS dependency required by plugin 'gradle-info-plugin'
-        classpath group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: versionJGit
+        classpath group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.+'
         classpath group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: '3.3'
         classpath group: 'com.google.gradle', name: 'osdetector-gradle-plugin', version: '1.7.0'
     }
