--- a/google-cloud/build.gradle
+++ b/google-cloud/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
     implementation project(':tweetwallfx-tweet-api')
     implementation project(':tweetwallfx-filterchain')
-    implementation group: 'com.google.cloud', name: 'google-cloud-vision', version: versionGoogleVision
+    implementation group: 'com.google.cloud', name: 'google-cloud-vision', version: '1.99.1'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
     implementation group: 'org.ehcache', name: 'ehcache', version: versionEHCache
 }
