--- a/devoxx-api-cfp/build.gradle
+++ b/devoxx-api-cfp/build.gradle
@@ -23,7 +23,8 @@
  */
 
 dependencies {
-    compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: versionJavaxWsRsAPI
+    api group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
+
     compile project(':tweetwallfx-utility')
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
