--- a/util/build.gradle
+++ b/util/build.gradle
@@ -27,5 +27,5 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
 
     runtimeOnly group: 'org.eclipse', name: 'yasson', version: '1.0.5'
-    runtime group: 'org.glassfish', name: 'javax.json', version: versionJavaxJson
+    runtimeOnly group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
 }
