--- a/util/build.gradle
+++ b/util/build.gradle
@@ -23,7 +23,7 @@
  */
 
 dependencies {
-    implementation group: 'javax.json.bind', name:'javax.json.bind-api', version: versionJavaxJsonBindAPI
+    implementation group: 'javax.json.bind', name:'javax.json.bind-api', version: '1.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
 
     runtimeOnly group: 'org.eclipse', name: 'yasson', version: '1.0.5'
