--- a/devoxx-cfp-test/build.gradle
+++ b/devoxx-cfp-test/build.gradle
@@ -26,5 +26,5 @@ dependencies {
 
     implementation group: 'junit', name: 'junit', version: '4.13.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
-    implementation group: 'org.assertj', name: 'assertj-core', version: '3.+'
+    implementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
 }
