--- a/core/build.gradle
+++ b/core/build.gradle
@@ -25,10 +25,9 @@
 dependencies {
     api group: 'de.jensd', name: 'fontawesomefx-commons', version: '11.0'
     api group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: '4.7.0-11'
-    api group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
-
-    compile project(':tweetwallfx-tweet-api')
-    compile project(':tweetwallfx-configuration')
+    api project(':tweetwallfx-configuration')
+    api project(':tweetwallfx-tweet-api')
 
     implementation group: 'com.vdurmont', name: 'emoji-java', version: '5.1.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
 }
