--- a/devoxx-api-cfp/build.gradle
+++ b/devoxx-api-cfp/build.gradle
@@ -24,8 +24,7 @@
 
 dependencies {
     api group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
-
-    compile project(':tweetwallfx-utility')
+    api project(':tweetwallfx-utility')
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
 
