--- a/devoxx-cfp-test/build.gradle
+++ b/devoxx-cfp-test/build.gradle
@@ -22,9 +22,8 @@
  * THE SOFTWARE.
  */
 dependencies {
-    compile project(':tweetwallfx-devoxx-api-cfp')
-
-    implementation group: 'junit', name: 'junit', version: '4.13.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation group: 'junit', name: 'junit', version: '4.13.2'
     implementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
+    implementation project(':tweetwallfx-devoxx-api-cfp')
 }
