--- a/generic2d/build.gradle
+++ b/generic2d/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2015-2019 TweetWallFX
+ * Copyright (c) 2015-2022 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,6 +23,8 @@
  */
 
 dependencies {
-    compile project(':tweetwallfx-2d')
-    compile project(':tweetwallfx-controls')
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
+    implementation project(':tweetwallfx-2d')
+    implementation project(':tweetwallfx-core')
+    implementation project(':tweetwallfx-tweet-api')
 }
