--- a/stepengine-steps/build.gradle
+++ b/stepengine-steps/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2017-2019 TweetWallFX
+ * Copyright (c) 2017-2022 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,5 +23,5 @@
  */
 
 dependencies {
-    compile project(':tweetwallfx-stepengine-dataproviders')
+    implementation project(':tweetwallfx-stepengine-dataproviders')
 }
