--- a/tweet-api/build.gradle
+++ b/tweet-api/build.gradle
@@ -22,7 +22,6 @@
  * THE SOFTWARE.
  */
 dependencies {
-    compile project(':tweetwallfx-filterchain')
-
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation project(':tweetwallfx-filterchain')
 }
