--- a/tweet-impl-twitter4j/build.gradle
+++ b/tweet-impl-twitter4j/build.gradle
@@ -23,11 +23,9 @@
  */
 
 dependencies {
-    compile project(':tweetwallfx-tweet-api')
-    compile project(':tweetwallfx-tweet-impl-twitter4j-oauth')
-    compile project(':tweetwallfx-configuration')
-
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
     implementation group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.7'
     implementation group: 'org.twitter4j', name: 'twitter4j-stream', version: '4.0.7'
+    implementation project(':tweetwallfx-filterchain')
+    implementation project(':tweetwallfx-tweet-api')
 }
